--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
+    "@inrupt/solid-client": "^2.0.0",
+    "@inrupt/solid-client-authn-browser": "^2.0.0",
+    "@inrupt/vocab-common-rdf": "^1.0.5",
     "buffer": "^6.0.3",
     "dotenv": "^16.4.0",
     "process": "^0.11.10",
