code improvements & more seperation of concern

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@craco/craco": "^7.1.0",
     "@inrupt/solid-client": "^2.0.0",
     "@inrupt/solid-client-authn-browser": "^2.0.0",
+    "@inrupt/solid-ui-react": "^3.0.0",
     "@inrupt/vocab-common-rdf": "^1.0.5",
     "buffer": "^6.0.3",
     "dotenv": "^16.4.0",
@@ -15,6 +16,7 @@
     "react": "^16.13.1",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^16.13.1",
+    "react-hooks": "^1.0.1",
     "react-scripts": "^5.0.1",
     "simple-peer": "9.6.2",
     "socket.io-client": "^2.3.0",
